force-app/main/default/objects/Switching_Message__c/Switching_Message__c.object-meta.xml
<CustomObject>
    <label>Switching Message</label>
    <nameField>
        <displayFormat>MSG-{0000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Switching Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>