force-app/main/default/objects/Switching_Message__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Date when the service was activated</description>
    <inlineHelpText>Date when the service was activated</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>