force-app/main/default/objects/Switching_Message__c/fields/CUPS__c.field-meta.xml
<CustomField>
    <fullName>CUPS__c</fullName>
    <description>CUPS code for the gas service</description>
    <label>CUPS</label>
    <length>22</length>
    <required>true</required>
    <type>Text</type>
</CustomField>