force-app/main/default/objects/Switching_Message__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <description>Distributor code</description>
    <label>Distributor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NATURGY</fullName>
                <label>Naturgy</label>
            </value>
            <value>
                <fullName>ENDESA</fullName>
                <label>Endesa</label>
            </value>
            <value>
                <fullName>IBERDROLA</fullName>
                <label>Iberdrola</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>