force-app/main/default/objects/Switching_Message__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date when the switching request should take effect</description>
    <inlineHelpText>Date when the switching request should take effect</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>