force-app/main/default/objects/Switching_Message__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message associated with the switching message</description>
    <inlineHelpText>Error message associated with the switching message</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>