force-app/main/default/objects/Switching_Message__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>Content of the message</description>
    <inlineHelpText>Content of the message</inlineHelpText>
    <label>Message Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>