force-app/main/default/objects/Switching_Message__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>Type of message (Request/Response)</description>
    <inlineHelpText>Type of message (Request/Response)</inlineHelpText>
    <label>Message Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
                <default>true</default>
                <label>Request</label>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>