force-app/main/default/objects/Switching_Message__c/fields/New_Holder_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Holder_Email__c</fullName>
    <label>New Holder Email</label>
    <type>Email</type>
</CustomField>