force-app/main/default/objects/Switching_Message__c/fields/New_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Holder_Name__c</fullName>
    <label>New Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>