force-app/main/default/objects/Switching_Message__c/fields/New_Holder_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Holder_Phone__c</fullName>
    <label>New Holder Phone</label>
    <type>Phone</type>
</CustomField>