force-app/main/default/objects/Switching_Message__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related switching request</description>
    <inlineHelpText>Related switching request record</inlineHelpText>
    <label>Request</label>
    <referenceTo>Switching_Request__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>