force-app/main/default/objects/Switching_Message__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <inlineHelpText>Request body content</inlineHelpText>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>