force-app/main/default/objects/Switching_Message__c/fields/Request_XML__c.field-meta.xml
<CustomField>
    <fullName>Request_XML__c</fullName>
    <description>XML request sent to the distributor</description>
    <label>Request XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>