force-app/main/default/objects/Switching_Message__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>Date when the response was received</description>
    <inlineHelpText>Date when the response was received</inlineHelpText>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>