force-app/main/default/objects/Switching_Message__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp of when the message was sent or received</description>
    <inlineHelpText>Timestamp of when the message was sent or received</inlineHelpText>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>